; ModuleID = '/home/carl/AnghaBench/postgres/src/bin/psql/extr_startup.c_log_locus_callback.c'
source_filename = "/home/carl/AnghaBench/postgres/src/bin/psql/extr_startup.c_log_locus_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i8*, i64 }

@pset = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8**, i64*)* @log_locus_callback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @log_locus_callback(i8** %0, i64* %1) #0 {
  %3 = alloca i8**, align 8
  %4 = alloca i64*, align 8
  store i8** %0, i8*** %3, align 8
  store i64* %1, i64** %4, align 8
  %5 = load i8*, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @pset, i32 0, i32 0), align 8
  %6 = icmp ne i8* %5, null
  br i1 %6, label %7, label %12

7:                                                ; preds = %2
  %8 = load i8*, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @pset, i32 0, i32 0), align 8
  %9 = load i8**, i8*** %3, align 8
  store i8* %8, i8** %9, align 8
  %10 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @pset, i32 0, i32 1), align 8
  %11 = load i64*, i64** %4, align 8
  store i64 %10, i64* %11, align 8
  br label %15

12:                                               ; preds = %2
  %13 = load i8**, i8*** %3, align 8
  store i8* null, i8** %13, align 8
  %14 = load i64*, i64** %4, align 8
  store i64 0, i64* %14, align 8
  br label %15

15:                                               ; preds = %12, %7
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
